--- a/boost_dll/tutorial.html
+++ b/boost_dll/tutorial.html
@@ -679,7 +679,7 @@ Destructing my_plugin_sum ;o)
         However such task could be easily implemented.
       </p>
 <p>
-        // This block is invisible for Quickbook documentation All you need to do,
+        All you need to do,
         is write a simple class that stores callbacks and calls them at destruction:
       </p>
 <p>
