--- a/BOOST_DLL_AUTO_ALIAS.html
+++ b/BOOST_DLL_AUTO_ALIAS.html
@@ -33,9 +33,9 @@
 
 </span>BOOST_DLL_AUTO_ALIAS(FunctionOrVar)</pre></div>
 <div class="refsect1">
-<a name="idp98231792"></a><h2>Description</h2>
+<a name="idp92218080"></a><h2>Description</h2>
 <p>This macro is usefull in cases of long mangled C++ names. For example some <code class="computeroutput">void boost::foo(std::sting)</code> function name will change to something like <code class="computeroutput">N5boostN3foosE</code> after mangling. Importing function by <code class="computeroutput">N5boostN3foosE</code> name does not looks user friendly, especially assuming the fact that different compilers have different mangling schemes.*</p>
-<p>Msut be used in scope where FunctionOrVar declared. FunctionOrVar must be a valid C name, which means that it must not contain <code class="computeroutput">::</code>.</p>
+<p>Must be used in scope where FunctionOrVar declared. FunctionOrVar must be a valid C name, which means that it must not contain <code class="computeroutput">::</code>.</p>
 <p>Functions or variables in global namespace must not have names same as FunctionOrVar.</p>
 <p>Puts all the aliases into the <span class="bold"><strong>"boostdll"</strong></span> read only section of the binary. Almost same as  <a class="link" href="BOOST_DLL_ALIAS.html" title="Macro BOOST_DLL_ALIAS">BOOST_DLL_ALIAS</a>(FunctionOrVar, FunctionOrVar).</p>
 <p>
@@ -73,15 +73,5 @@
 <div class="spirit-nav">
 <a accesskey="p" href="BOOST_DLL_ALIAS_SECTIONED.html"><img src="http://www.boost.org/doc/libs/1_56_0/doc/src/images/prev.png" alt="Prev"></a><a accesskey="u" href="dll/reference.html#header.boost.dll.alias_hpp"><img src="http://www.boost.org/doc/libs/1_56_0/doc/src/images/up.png" alt="Up"></a><a accesskey="h" href="index.html"><img src="http://www.boost.org/doc/libs/1_56_0/doc/src/images/home.png" alt="Home"></a><a accesskey="n" href="boost/dll/library_info.html"><img src="http://www.boost.org/doc/libs/1_56_0/doc/src/images/next.png" alt="Next"></a>
 </div>
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-64524257-1', 'auto');
-      ga('send', 'pageview');
-
-    </script>
 </body>
 </html>
