--- a/BOOST_DLL_SECTION.html
+++ b/BOOST_DLL_SECTION.html
@@ -26,14 +26,14 @@
 <a name="BOOST_DLL_SECTION"></a><div class="titlepage"></div>
 <div class="refnamediv">
 <h2><span class="refentrytitle">Macro BOOST_DLL_SECTION</span></h2>
-<p>BOOST_DLL_SECTION &#8212; Macro that puts symbol to a specific section. </p>
+<p>BOOST_DLL_SECTION &#8212; Macro that puts symbol to a specific section. On MacOS all the sections are put into "__DATA" segment. </p>
 </div>
 <h2 xmlns:rev="http://www.cs.rpi.edu/~gregod/boost/tools/doc/revision" class="refsynopsisdiv-title">Synopsis</h2>
 <div xmlns:rev="http://www.cs.rpi.edu/~gregod/boost/tools/doc/revision" class="refsynopsisdiv"><pre class="synopsis"><span class="comment">// In header: &lt;<a class="link" href="dll/reference.html#header.boost.dll.alias_hpp" title="Header &lt;boost/dll/alias.hpp&gt;">boost/dll/alias.hpp</a>&gt;
 
 </span>BOOST_DLL_SECTION(SectionName, Permissions)</pre></div>
 <div class="refsect1">
-<a name="idp98160672"></a><h2>Description</h2>
+<a name="idp92147008"></a><h2>Description</h2>
 <p>
 </p>
 <div class="variablelist"><table border="0">
@@ -69,15 +69,5 @@
 <div class="spirit-nav">
 <a accesskey="p" href="BOOST_DLL_SELECTANY.html"><img src="http://www.boost.org/doc/libs/1_56_0/doc/src/images/prev.png" alt="Prev"></a><a accesskey="u" href="dll/reference.html#header.boost.dll.alias_hpp"><img src="http://www.boost.org/doc/libs/1_56_0/doc/src/images/up.png" alt="Up"></a><a accesskey="h" href="index.html"><img src="http://www.boost.org/doc/libs/1_56_0/doc/src/images/home.png" alt="Home"></a><a accesskey="n" href="BOOST_DLL_ALIAS.html"><img src="http://www.boost.org/doc/libs/1_56_0/doc/src/images/next.png" alt="Next"></a>
 </div>
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-64524257-1', 'auto');
-      ga('send', 'pageview');
-
-    </script>
 </body>
 </html>
