--- a/boost/dll/symbol_location.html
+++ b/boost/dll/symbol_location.html
@@ -34,12 +34,24 @@
 </span>
 <span class="keyword">template</span><span class="special">&lt;</span><span class="keyword">typename</span> T<span class="special">&gt;</span> <span class="identifier">boost</span><span class="special">::</span><span class="identifier">filesystem</span><span class="special">::</span><span class="identifier">path</span> <span class="identifier">symbol_location</span><span class="special">(</span><span class="keyword">const</span> <span class="identifier">T</span> <span class="special">&amp;</span> symbol<span class="special">)</span><span class="special">;</span></pre></div>
 <div class="refsect1">
-<a name="idp98422208"></a><h2>Description</h2>
+<a name="idp92408528"></a><h2>Description</h2>
 <p>On success returns full path and name of the binary object that holds symbol. 
 
 
 
-</p>
+<span class="bold"><strong>Examples:</strong></span> </p>
+<pre class="programlisting"><span class="keyword">int</span> <span class="identifier">var</span><span class="special">;</span>
+<span class="keyword">void</span> <span class="identifier">foo</span><span class="special">(</span><span class="special">)</span> <span class="special">{</span><span class="special">}</span>
+
+<span class="keyword">int</span> <span class="identifier">main</span><span class="special">(</span><span class="special">)</span> <span class="special">{</span>
+   <span class="identifier">dll</span><span class="special">::</span><span class="identifier">symbol_location</span><span class="special">(</span><span class="identifier">var</span><span class="special">)</span><span class="special">;</span>                     <span class="comment">// returns program location</span>
+   <span class="identifier">dll</span><span class="special">::</span><span class="identifier">symbol_location</span><span class="special">(</span><span class="identifier">foo</span><span class="special">)</span><span class="special">;</span>                     <span class="comment">// returns program location</span>
+   <span class="identifier">dll</span><span class="special">::</span><span class="identifier">symbol_location</span><span class="special">(</span><span class="identifier">std</span><span class="special">::</span><span class="identifier">cerr</span><span class="special">)</span><span class="special">;</span>               <span class="comment">// returns location of libstdc++: "/usr/lib/x86_64-linux-gnu/libstdc++.so.6"</span>
+   <span class="identifier">dll</span><span class="special">::</span><span class="identifier">symbol_location</span><span class="special">(</span><span class="identifier">std</span><span class="special">::</span><span class="identifier">placeholders</span><span class="special">::</span><span class="identifier">_1</span><span class="special">)</span><span class="special">;</span>   <span class="comment">// returns location of libstdc++: "/usr/lib/x86_64-linux-gnu/libstdc++.so.6"</span>
+   <span class="identifier">dll</span><span class="special">::</span><span class="identifier">symbol_location</span><span class="special">(</span><span class="identifier">std</span><span class="special">::</span><span class="identifier">puts</span><span class="special">)</span><span class="special">;</span>               <span class="comment">// returns location of libc: "/lib/x86_64-linux-gnu/libc.so.6"</span>
+<span class="special">}</span>
+</pre>
+<p> </p>
 <div class="variablelist"><table border="0">
 <col align="left" valign="top">
 <tbody>
@@ -69,7 +81,7 @@
 </tr>
 <tr>
 <td><p><span class="term">Throws:</span></p></td>
-<td>std::bad_alloc in case of insufficient memory. </td>
+<td>std::bad_alloc in case of insufficient memory.</td>
 </tr>
 </tbody>
 </table></div>
@@ -87,15 +99,5 @@
 <div class="spirit-nav">
 <a accesskey="p" href="library_info.html"><img src="http://www.boost.org/doc/libs/1_56_0/doc/src/images/prev.png" alt="Prev"></a><a accesskey="u" href="../../dll/reference.html#header.boost.dll.runtime_symbol_info_hpp"><img src="http://www.boost.org/doc/libs/1_56_0/doc/src/images/up.png" alt="Up"></a><a accesskey="h" href="../../index.html"><img src="http://www.boost.org/doc/libs/1_56_0/doc/src/images/home.png" alt="Home"></a><a accesskey="n" href="this_line_location.html"><img src="http://www.boost.org/doc/libs/1_56_0/doc/src/images/next.png" alt="Next"></a>
 </div>
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-64524257-1', 'auto');
-      ga('send', 'pageview');
-
-    </script>
 </body>
 </html>
