--- a/boost_dll/f_a_q_.html
+++ b/boost_dll/f_a_q_.html
@@ -61,9 +61,9 @@
                 <span class="bold"><strong>Answer:</strong></span> Yes, you can. Symbols need
                 be exported using in the executable using <code class="computeroutput"><span class="identifier">BOOST_SYMBOL_EXPORT</span></code>
                 or <code class="computeroutput"><span class="identifier">BOOST_DLL_ALIAS</span></code>.
-                You can use 'shared_library(program_location())' method to load yourself.
-                Refer to the Tutorial section for more info. You can also query executables,
-                just provide a path to the executable to <code class="computeroutput"><span class="identifier">library_info</span></code>
+                You can call <code class="computeroutput"><span class="identifier">shared_library</span><span class="special">(</span><span class="identifier">program_location</span><span class="special">())</span></code> to load yourself. Refer to the
+                Tutorial section for more info. You can also query executables, just
+                provide a path to the executable to <code class="computeroutput"><span class="identifier">library_info</span></code>
                 class.
               </li></ul></div>
         </li></ul></div>
@@ -106,7 +106,7 @@
           <span class="bold"><strong>Question:</strong></span> I have found a bug, how do I
           notify?]
           <div class="itemizedlist"><ul class="itemizedlist" type="circle"><li class="listitem">
-                <span class="bold"><strong>Answer:</strong></span> Create an <a href="https://github.com/apolukhin/Boost.Plugin/issues" target="_top">issue
+                <span class="bold"><strong>Answer:</strong></span> Create an <a href="https://github.com/apolukhin/Boost.DLL/issues" target="_top">issue
                 at GitHub</a> with a detailed description. [endsect]
               </li></ul></div>
         </li></ul></div>
@@ -123,15 +123,5 @@
 <div class="spirit-nav">
 <a accesskey="p" href="limitations.html"><img src="http://www.boost.org/doc/libs/1_56_0/doc/src/images/prev.png" alt="Prev"></a><a accesskey="u" href="../index.html"><img src="http://www.boost.org/doc/libs/1_56_0/doc/src/images/up.png" alt="Up"></a><a accesskey="h" href="../index.html"><img src="http://www.boost.org/doc/libs/1_56_0/doc/src/images/home.png" alt="Home"></a><a accesskey="n" href="design_rationale.html"><img src="http://www.boost.org/doc/libs/1_56_0/doc/src/images/next.png" alt="Next"></a>
 </div>
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-64524257-1', 'auto');
-      ga('send', 'pageview');
-
-    </script>
 </body>
 </html>
