--- a/BOOST_DLL_FORCE_ALIAS_INSTANTIATION.html
+++ b/BOOST_DLL_FORCE_ALIAS_INSTANTIATION.html
@@ -33,13 +33,13 @@
 
 </span>BOOST_DLL_FORCE_ALIAS_INSTANTIATION</pre></div>
 <div class="refsect1">
-<a name="idp99693200"></a><h2>Description</h2>
+<a name="idp68226048"></a><h2>Description</h2>
 <p>Define this macro to explicitly specify translation unit in which alias must be instantiated. See section 'Limitations' for more info. You may find usage examples in source codes of almost each tutorial. </p>
 </div>
 </div>
 <table xmlns:rev="http://www.cs.rpi.edu/~gregod/boost/tools/doc/revision" width="100%"><tr>
 <td align="left"></td>
-<td align="right"><div class="copyright-footer">Copyright &#169; 2014 Renato Tegon Forti, Antony Polukhin<p>
+<td align="right"><div class="copyright-footer">Copyright &#169; 2014 Renato Tegon Forti, Antony Polukhin<br>Copyright &#169; 2015 Antony Polukhin<p>
         Distributed under the Boost Software License, Version 1.0. (See accompanying
         file LICENSE_1_0.txt or copy at http://www.boost.org/LICENSE_1_0.txt)
       </p>
