--- a/BOOST_DLL_SECTION.html
+++ b/BOOST_DLL_SECTION.html
@@ -33,7 +33,7 @@
 
 </span>BOOST_DLL_SECTION(SectionName, Permissions)</pre></div>
 <div class="refsect1">
-<a name="idp99702928"></a><h2>Description</h2>
+<a name="idp68235776"></a><h2>Description</h2>
 <p>
 </p>
 <div class="variablelist"><table border="0">
@@ -59,7 +59,7 @@
 </div>
 <table xmlns:rev="http://www.cs.rpi.edu/~gregod/boost/tools/doc/revision" width="100%"><tr>
 <td align="left"></td>
-<td align="right"><div class="copyright-footer">Copyright &#169; 2014 Renato Tegon Forti, Antony Polukhin<p>
+<td align="right"><div class="copyright-footer">Copyright &#169; 2014 Renato Tegon Forti, Antony Polukhin<br>Copyright &#169; 2015 Antony Polukhin<p>
         Distributed under the Boost Software License, Version 1.0. (See accompanying
         file LICENSE_1_0.txt or copy at http://www.boost.org/LICENSE_1_0.txt)
       </p>
