--- a/boost/dll/import.html
+++ b/boost/dll/import.html
@@ -45,9 +45,9 @@
   <span class="keyword">auto</span> <span class="identifier">import</span><span class="special">(</span><span class="keyword">const</span> <span class="identifier">boost</span><span class="special">::</span><span class="identifier">filesystem</span><span class="special">::</span><span class="identifier">path</span> <span class="special">&amp;</span> lib<span class="special">,</span> <span class="keyword">const</span> <span class="identifier">std</span><span class="special">::</span><span class="identifier">string</span> <span class="special">&amp;</span> name<span class="special">,</span> 
               <span class="identifier">load_mode</span><span class="special">::</span><span class="identifier">type</span> mode <span class="special">=</span> <span class="identifier">load_mode</span><span class="special">::</span><span class="identifier">default_mode</span><span class="special">)</span><span class="special">;</span></pre></div>
 <div class="refsect1">
-<a name="idp101013792"></a><h2>Description</h2>
+<a name="idp69633216"></a><h2>Description</h2>
 <p>Returns boost::function&lt;T&gt; or boost::shared_ptr&lt;T&gt; that holds an imported function or variable from the loaded library and refcounts usage of the loaded shared library, so that it won't get unload until all copies of return value are not destroyed.</p>
-<p>This call will succeed if call to <a class="link" href="shared_library.html" title="Class shared_library">boost::dll::shared_library</a><code class="computeroutput">::search_symbol(boost::string_ref )</code> function with the same symbol name returned <code class="computeroutput">true</code>.</p>
+<p>This call will succeed if call to <a class="link" href="shared_library.html" title="Class shared_library">boost::dll::shared_library</a><code class="computeroutput">::has_symbol(const char* )</code> function with the same symbol name returned <code class="computeroutput">true</code>.</p>
 <p>For importing symbols by <span class="bold"><strong>alias</strong></span> names use <a class="link" href="import_alias.html" title="Function import_alias">boost::dll::import_alias</a> method.</p>
 <p><span class="bold"><strong>Examples:</strong></span> </p>
 <pre class="programlisting"><span class="identifier">boost</span><span class="special">::</span><span class="identifier">function</span><span class="special">&lt;</span><span class="keyword">int</span><span class="special">(</span><span class="keyword">int</span><span class="special">)</span><span class="special">&gt;</span> <span class="identifier">f</span> <span class="special">=</span> <span class="identifier">import</span><span class="special">&lt;</span><span class="keyword">int</span><span class="special">(</span><span class="keyword">int</span><span class="special">)</span><span class="special">&gt;</span><span class="special">(</span>
@@ -91,7 +91,7 @@
 </div>
 <table xmlns:rev="http://www.cs.rpi.edu/~gregod/boost/tools/doc/revision" width="100%"><tr>
 <td align="left"></td>
-<td align="right"><div class="copyright-footer">Copyright &#169; 2014 Renato Tegon Forti, Antony Polukhin<p>
+<td align="right"><div class="copyright-footer">Copyright &#169; 2014 Renato Tegon Forti, Antony Polukhin<br>Copyright &#169; 2015 Antony Polukhin<p>
         Distributed under the Boost Software License, Version 1.0. (See accompanying
         file LICENSE_1_0.txt or copy at http://www.boost.org/LICENSE_1_0.txt)
       </p>
