--- a/boost/dll/program_location.html
+++ b/boost/dll/program_location.html
@@ -34,7 +34,7 @@
 </span>
 <span class="identifier">boost</span><span class="special">::</span><span class="identifier">filesystem</span><span class="special">::</span><span class="identifier">path</span> <span class="identifier">program_location</span><span class="special">(</span><span class="special">)</span><span class="special">;</span></pre></div>
 <div class="refsect1">
-<a name="idp100031584"></a><h2>Description</h2>
+<a name="idp68587456"></a><h2>Description</h2>
 <p>On success returns full path and name of the currently running program (the one which contains the <code class="computeroutput">main()</code> function).</p>
 <p>Return value can be used as a parameter for <code class="computeroutput"><a class="link" href="shared_library.html" title="Class shared_library">shared_library</a></code>. See Tutorial "Linking plugin into the executable" for usage example. Flag '-rdynamic' must be used when linking the plugin into the executable on Linux OS.</p>
 <p>
@@ -50,7 +50,7 @@
 </div>
 <table xmlns:rev="http://www.cs.rpi.edu/~gregod/boost/tools/doc/revision" width="100%"><tr>
 <td align="left"></td>
-<td align="right"><div class="copyright-footer">Copyright &#169; 2014 Renato Tegon Forti, Antony Polukhin<p>
+<td align="right"><div class="copyright-footer">Copyright &#169; 2014 Renato Tegon Forti, Antony Polukhin<br>Copyright &#169; 2015 Antony Polukhin<p>
         Distributed under the Boost Software License, Version 1.0. (See accompanying
         file LICENSE_1_0.txt or copy at http://www.boost.org/LICENSE_1_0.txt)
       </p>
