--- a/boost/dll/this_line_location.html
+++ b/boost/dll/this_line_location.html
@@ -34,7 +34,7 @@
 </span>
 <span class="identifier">boost</span><span class="special">::</span><span class="identifier">filesystem</span><span class="special">::</span><span class="identifier">path</span> <span class="identifier">this_line_location</span><span class="special">(</span><span class="special">)</span><span class="special">;</span></pre></div>
 <div class="refsect1">
-<a name="idp100019136"></a><h2>Description</h2>
+<a name="idp68575104"></a><h2>Description</h2>
 <p>On success returns full path and name of the binary object that holds the current line of code (the line in wich the <code class="computeroutput">this_line_location()</code> method was called).</p>
 <p>
 </p>
@@ -49,7 +49,7 @@
 </div>
 <table xmlns:rev="http://www.cs.rpi.edu/~gregod/boost/tools/doc/revision" width="100%"><tr>
 <td align="left"></td>
-<td align="right"><div class="copyright-footer">Copyright &#169; 2014 Renato Tegon Forti, Antony Polukhin<p>
+<td align="right"><div class="copyright-footer">Copyright &#169; 2014 Renato Tegon Forti, Antony Polukhin<br>Copyright &#169; 2015 Antony Polukhin<p>
         Distributed under the Boost Software License, Version 1.0. (See accompanying
         file LICENSE_1_0.txt or copy at http://www.boost.org/LICENSE_1_0.txt)
       </p>
