--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 <span class="firstname">Antony</span> <span class="surname">Polukhin</span>
 </h3></div></div>
 <div><p class="copyright">Copyright &#169; 2014 Renato Tegon Forti, Antony Polukhin</p></div>
+<div><p class="copyright">Copyright &#169; 2015 Antony Polukhin</p></div>
 <div><div class="legalnotice">
 <a name="dll.legal"></a><p>
         Distributed under the Boost Software License, Version 1.0. (See accompanying
@@ -80,18 +81,6 @@
 <div class="titlepage"><div><div><h2 class="title" style="clear: both">
 <a name="boost_dll.introduction"></a><a class="link" href="index.html#boost_dll.introduction" title="Motivation">Motivation</a>
 </h2></div></div></div>
-<div class="warning"><table border="0" summary="Warning">
-<tr>
-<td rowspan="2" align="center" valign="top" width="25"><img alt="[Warning]" src="http://www.boost.org/doc/libs/1_56_0/doc/src/images/warning.png"></td>
-<th align="left">Warning</th>
-</tr>
-<tr><td align="left" valign="top"><p>
-        This is not an official Boost C++ library. It wasn't reviewed and can't be
-        downloaded from www.boost.org. This beta is available to boost community
-        to know real interest and get comments for refinement. The intention is to
-        submit library to formal review, if community think that it is interesting!
-      </p></td></tr>
-</table></div>
 <p>
       Adding a specific features to an existing software applications at runtime
       could be useful in many cases. Such extensions, or plugins, are usually implemented
@@ -127,7 +116,7 @@
 </div>
 </div>
 <table xmlns:rev="http://www.cs.rpi.edu/~gregod/boost/tools/doc/revision" width="100%"><tr>
-<td align="left"><p><small>Last revised: August 10, 2015 at 21:44:27 GMT</small></p></td>
+<td align="left"><p><small>Last revised: August 15, 2015 at 18:08:24 GMT</small></p></td>
 <td align="right"><div class="copyright-footer"></div></td>
 </tr></table>
 <hr>
