--- a/index.html
+++ b/index.html
@@ -70,11 +70,21 @@
 <dt><span class="section"><a href="boost_dll/limitations.html">Limitations</a></span></dt>
 <dd><dl><dt><span class="section"><a href="boost_dll/limitations.html#boost_dll.limitations.mingw">MinGW</a></span></dt></dl></dd>
 <dt><span class="section"><a href="boost_dll/f_a_q_.html">F.A.Q.</a></span></dt>
+<dt><span class="section"><a href="boost_dll/design_rationale.html">Design Rationale</a></span></dt>
 <dd><dl>
-<dt><span class="section"><a href="boost_dll/f_a_q_.html#boost_dll.f_a_q_.design_rationale">Design Rationale</a></span></dt>
-<dt><span class="section"><a href="boost_dll/f_a_q_.html#boost_dll.f_a_q_.dependencies">Dependencies</a></span></dt>
-<dt><span class="section"><a href="boost_dll/f_a_q_.html#boost_dll.f_a_q_.revision_history">Revision History</a></span></dt>
+<dt><span class="section"><a href="boost_dll/design_rationale.html#boost_dll.design_rationale.abi_portability_across_compilers">ABI
+      portability across compilers</a></span></dt>
+<dt><span class="section"><a href="boost_dll/design_rationale.html#boost_dll.design_rationale.user_s_plugin_api">User's
+      plugin API</a></span></dt>
+<dt><span class="section"><a href="boost_dll/design_rationale.html#boost_dll.design_rationale.performance_and_memory_allocations">Performance
+      and memory allocations</a></span></dt>
+<dt><span class="section"><a href="boost_dll/design_rationale.html#boost_dll.design_rationale.self_loading">Self loading</a></span></dt>
+<dt><span class="section"><a href="boost_dll/design_rationale.html#boost_dll.design_rationale.aliases_vs_mangling">Aliases
+      vs Mangling</a></span></dt>
+<dt><span class="section"><a href="boost_dll/design_rationale.html#boost_dll.design_rationale.no_copy">No copy</a></span></dt>
 </dl></dd>
+<dt><span class="section"><a href="boost_dll/dependencies.html">Dependencies</a></span></dt>
+<dt><span class="section"><a href="boost_dll/revision_history.html">Revision History</a></span></dt>
 </dl>
 </div>
 <div class="section">
@@ -116,7 +126,7 @@
 </div>
 </div>
 <table xmlns:rev="http://www.cs.rpi.edu/~gregod/boost/tools/doc/revision" width="100%"><tr>
-<td align="left"><p><small>Last revised: August 21, 2015 at 06:49:25 GMT</small></p></td>
+<td align="left"><p><small>Last revised: August 22, 2015 at 08:46:28 GMT</small></p></td>
 <td align="right"><div class="copyright-footer"></div></td>
 </tr></table>
 <hr>
