--- a/boost_dll/tutorial.html
+++ b/boost_dll/tutorial.html
@@ -483,8 +483,7 @@ Destructing my_plugin_sum ;o)
 <p>
         Running the program will output the following:
       </p>
-<pre class="programlisting">Application started
-Call function
+<pre class="programlisting">Call function
 Constructing my_plugin_static
 Computed Value: 0
 Destructing my_plugin_static
