--- a/BOOST_DLL_ALIAS_SECTIONED.html
+++ b/BOOST_DLL_ALIAS_SECTIONED.html
@@ -33,7 +33,7 @@
 
 </span>BOOST_DLL_ALIAS_SECTIONED(FunctionOrVar, AliasName, SectionName)</pre></div>
 <div class="refsect1">
-<a name="idp98282640"></a><h2>Description</h2>
+<a name="idp87494000"></a><h2>Description</h2>
 <p>
 <span class="bold"><strong>Example:</strong></span> </p>
 <pre class="programlisting"><span class="keyword">namespace</span> <span class="identifier">foo</span> <span class="special">{</span>
@@ -56,7 +56,7 @@
 </tr>
 <tr>
 <td><p><span class="term"><code class="computeroutput">FunctionOrVar</code></span></p></td>
-<td><p>Function or variable for wich an alias must be made. </p></td>
+<td><p>Function or variable for which an alias must be made. </p></td>
 </tr>
 <tr>
 <td><p><span class="term"><code class="computeroutput">SectionName</code></span></p></td>
