--- a/boost_dll/limitations.html
+++ b/boost_dll/limitations.html
@@ -28,7 +28,7 @@
 </h2></div></div></div>
 <div class="toc"><dl><dt><span class="section"><a href="limitations.html#boost_dll.limitations.mingw">MinGW</a></span></dt></dl></div>
 <p>
-      Some platforms and compileres do not provide all the required functionality
+      Some platforms and compilers do not provide all the required functionality
       to have a fully functional Boost.DLL. Such compilers are mentioned in this
       section along with possible workarounds for those limitations.
     </p>
