--- a/boost_dll/revision_history.html
+++ b/boost_dll/revision_history.html
@@ -57,6 +57,9 @@
 <li class="listitem">
           Renamed <code class="computeroutput"><span class="identifier">shared_library</span><span class="special">::</span><span class="identifier">search_symbol</span><span class="special">()</span></code> to <code class="computeroutput"><span class="identifier">shared_library</span><span class="special">::</span><span class="identifier">has</span><span class="special">()</span></code>
         </li>
+<li class="listitem">
+          Dropped support for useless Windows specific <code class="computeroutput"><span class="identifier">load_library_as_</span><span class="special">*</span></code> flags
+        </li>
 </ul></div>
 <h6>
 <a name="boost_dll.revision_history.h1"></a>
