--- a/BOOST_DLL_ALIAS.html
+++ b/BOOST_DLL_ALIAS.html
@@ -33,9 +33,9 @@
 
 </span>BOOST_DLL_ALIAS(FunctionOrVar, AliasName)</pre></div>
 <div class="refsect1">
-<a name="idp98246832"></a><h2>Description</h2>
-<p>This macro is usefull in cases of long mangled C++ names. For example some <code class="computeroutput">void boost::foo(std::sting)</code> function name will change to something like <code class="computeroutput">N5boostN3foosE</code> after mangling. Importing function by <code class="computeroutput">N5boostN3foosE</code> name does not looks user friendly, especially assuming the fact that different compilers have different mangling schemes. AliasName is the name that won't be mangled and can be used as a portable import name.</p>
-<p>Can be used in any namespace, including global. FunctionOrVar must be fully qualified, so that address of it could be taken. Multiple different alises for a single variable/function are allowed.</p>
+<a name="idp87458288"></a><h2>Description</h2>
+<p>This macro is useful in cases of long mangled C++ names. For example some <code class="computeroutput">void boost::foo(std::sting)</code> function name will change to something like <code class="computeroutput">N5boostN3foosE</code> after mangling. Importing function by <code class="computeroutput">N5boostN3foosE</code> name does not looks user friendly, especially assuming the fact that different compilers have different mangling schemes. AliasName is the name that won't be mangled and can be used as a portable import name.</p>
+<p>Can be used in any namespace, including global. FunctionOrVar must be fully qualified, so that address of it could be taken. Multiple different aliases for a single variable/function are allowed.</p>
 <p>Make sure that AliasNames are unique per library/executable. Functions or variables in global namespace must not have names same as AliasNames.</p>
 <p>Same AliasName in different translation units must point to the same FunctionOrVar.</p>
 <p>Puts all the aliases into the <span class="bold"><strong>"boostdll"</strong></span> read only section of the binary. Equal to  <a class="link" href="BOOST_DLL_ALIAS_SECTIONED.html" title="Macro BOOST_DLL_ALIAS_SECTIONED">BOOST_DLL_ALIAS_SECTIONED</a>(FunctionOrVar, AliasName, boostdll).</p>
@@ -63,7 +63,7 @@
 </tr>
 <tr>
 <td><p><span class="term"><code class="computeroutput">FunctionOrVar</code></span></p></td>
-<td><p>Function or variable for wich an alias must be made. </p></td>
+<td><p>Function or variable for which an alias must be made. </p></td>
 </tr>
 </tbody>
 </table></div></td>
