--- a/BOOST_DLL_AUTO_ALIAS.html
+++ b/BOOST_DLL_AUTO_ALIAS.html
@@ -33,8 +33,8 @@
 
 </span>BOOST_DLL_AUTO_ALIAS(FunctionOrVar)</pre></div>
 <div class="refsect1">
-<a name="idp98308640"></a><h2>Description</h2>
-<p>This macro is usefull in cases of long mangled C++ names. For example some <code class="computeroutput">void boost::foo(std::sting)</code> function name will change to something like <code class="computeroutput">N5boostN3foosE</code> after mangling. Importing function by <code class="computeroutput">N5boostN3foosE</code> name does not looks user friendly, especially assuming the fact that different compilers have different mangling schemes.*</p>
+<a name="idp87520064"></a><h2>Description</h2>
+<p>This macro is useful in cases of long mangled C++ names. For example some <code class="computeroutput">void boost::foo(std::sting)</code> function name will change to something like <code class="computeroutput">N5boostN3foosE</code> after mangling. Importing function by <code class="computeroutput">N5boostN3foosE</code> name does not looks user friendly, especially assuming the fact that different compilers have different mangling schemes.*</p>
 <p>Must be used in scope where FunctionOrVar declared. FunctionOrVar must be a valid C name, which means that it must not contain <code class="computeroutput">::</code>.</p>
 <p>Functions or variables in global namespace must not have names same as FunctionOrVar.</p>
 <p>Puts all the aliases into the <span class="bold"><strong>"boostdll"</strong></span> read only section of the binary. Almost same as  <a class="link" href="BOOST_DLL_ALIAS.html" title="Macro BOOST_DLL_ALIAS">BOOST_DLL_ALIAS</a>(FunctionOrVar, FunctionOrVar).</p>
@@ -54,7 +54,7 @@
 <col align="left" valign="top">
 <tbody><tr>
 <td><p><span class="term"><code class="computeroutput">FunctionOrVar</code></span></p></td>
-<td><p>Function or variable for wich an unmangled alias must be made.</p></td>
+<td><p>Function or variable for which an unmangled alias must be made.</p></td>
 </tr></tbody>
 </table></div></td>
 </tr></tbody>
